2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Mario Carrión <mario@monouml.org>
	to add mime-types for OCL scripts (Closes: #7327)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastian Dröge <slomo@ubuntu.com>
	to not mis-detect Java files as C when they start with comments
	(Closes: #9407), same trick with CSS files (Closes: #9469)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add Lua scripts to the mime-types with help from
	Reuben Thomas (Closes: #8715)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Adam Schreiber <sadam@clemson.edu>
	and Sebastian Dröge <slomo@ubuntu.com> to clean up PGP/GnuPG file
	types detection (Closes: #9401)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make Dia's format a sub-class of text/xml
	as reported by Tom Parker <freedesktop@tevp.net> (Closes: #9241)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a mime-type for WBMP images
	(Closes: #9186)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add gnm:Workbook as a possible magic
	for Gnumeric files, spotted by Jean Bréfort (Closes: #9424)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wouter Bolsterlee
	<uws+freedesktop@xs4all.nl> to add *.rdfs and *.owl as suffixes for
	RDF files (Closes: #8389)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Matt Good <matt+fdo@matt-good.net>
	to add the eMusic download package mime-type and magic (Closes: #8105)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Andy Hedges
	<tmp1@hedges.net> to add more magic for the QuickTime files
	(Closes: #8936)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* po/POTFILES.skip: Patch from Torsten Schönfeld to add